[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pubsub_sdk"
version = "0.0.2"
authors = [
  { name="Marek Michalik", email="marek@justpoint.com" },
]
description = "Pub/Sub SDK"
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/Intrellit/pubsub_sdk"
Issues = "https://github.com/Intrellit/pubsub_sdk/issues"
