[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pubsub_sdk"
version = "0.0.5"
authors = [
  { name="Marek Michalik", email="marek@justpoint.com" },
]
description = "Pub/Sub SDK"
requires-python = ">=3.8"
dependencies = [
  "requests",
]

[project.urls]
Homepage = "https://github.com/Intrellit/pubsub_sdk"
Issues = "https://github.com/Intrellit/pubsub_sdk/issues"
